Annen reduksjon -> sum
